- Added additional hybrid "passthrough" rules, to enable variable-length append/prepend attacks
- Increased the maximum size of edata2 in Kerberos 5 TGS-REP etype 23
- Allow hashfile for -m 16800 to be used with -m 16801
- Make the masks parser more restrictive by rejecting a single '?' at the end of the mask (use ?? instead)

##
## Bugs
##

- Fixed a invalid scalar datatype return value in hc_bytealign() where it should be a vector datatype return value
- Fixed a problem with attack mode -a 7 together with stdout mode where the mask bytes were missing in the output
- Fixed a problem with tab completion where --self-test-disable did incorrecly expect a further parameter/value
- Fixed the ciphertext max length in Ansible Vault parser
- Fixed detection of unique ESSID in WPA-PMKID-* parser
- Fixed speed/delay problem when quitting while the outfile folder is being scanned
- Fixed a race condition in status view leading to out-of-bound reads

* changes v4.2.0 -> v4.2.1

##
## Improvements
##

- Try to evaluate available OpenCL device memory and use this information instead of total available OpenCL device memory for autotune

##
## Bugs
##

- Fixed a buffer overflow in precompute_salt_md5() in case salt was longer than 64 characters

* changes v4.1.0 -> v4.2.0

##
## Algorithms
##

- Added hash-mode 16700 = FileVault 2
- Added hash-mode 16800 = WPA-PMKID-PBKDF2
- Added hash-mode 16801 = WPA-PMKID-PMK
- Added hash-mode 16900 = Ansible Vault

##
## Improvements
##

- Added JtR-compatible support for hex notation in rules engine
- Added OpenCL device utilization to the status information in machine-readable output
- Added missing NV Tesla and Titan GPU details to tuning database
- General file handling: Abort if a byte order mark (BOM) was detected in a wordlist, hashlist, maskfile or rulefile
- HCCAPX management: Use advanced hints in message_pair stored by hcxtools about endian bitness of replay counter
- OpenCL kernels: Abort session if kernel self-test fails