@@ -282,6 +282,27 @@ static int monitor (hashcat_ctx_t *hashcat_ctx)
         if (performance_warnings == 10) EVENT_DATA (EVENT_MONITOR_PERFORMANCE_HINT, NULL, 0);
       }
     }
+
+    // stdin read timeout check
+
+    if (status_ctx->stdin_read_timeout_cnt >= STDIN_TIMEOUT_MIN)
+    {
+      if (status_ctx->stdin_read_timeout_cnt >= STDIN_TIMEOUT_MAX)
+      {
+        EVENT_DATA (EVENT_MONITOR_NOINPUT_ABORT, NULL, 0);
+
+        myabort (hashcat_ctx);
+
+        status_ctx->shutdown_inner = true;
+
+        break;
+      }
+
+      if ((status_ctx->stdin_read_timeout_cnt % STDIN_TIMEOUT_MIN) == 0)
+      {
+        EVENT_DATA (EVENT_MONITOR_NOINPUT_HINT, NULL, 0);
+      }
+    }
   }
 
   // final round of save_hash
